# vmp

./: Makefile.am  README.md  build.sh  config.h.in  configure.ac
server/: vmpserver.pl
src/: Makefile.am  vmpmemory.c  vmputils.c  vmputils.h
testsrc/: Makefile.am  tmemory.c  tutils.c
